--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -14,7 +14,6 @@
   margin-right: 15px;
 }
 
-body {
-  margin-right: 0;
-  margin-left: 0;
+html {
+  padding-right: 30px;
 }
